[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adi-polygon"
version = '0.0.1'
python_requires = ">=3.12"
description = "Organize and maintain your prompts the right way."
authors = [
    {name = "Ryan Young", email = "dev@ryayoung.com"}
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ryayoung/adi-polygon"
repository = "https://github.com/ryayoung/adi-polygon"
documentation = "https://adi-polygon.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries"
]
